@@ -1,3 +1,8 @@
+2017-08-09 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Added possibility to register custom process steps, resolves #23
+	* Removed old upgrade wizard, resolves #13
+
 2017-08-08 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Corrected usage of "useColumnIndex" in configuration loading, resolves #24
